Setup postgresql and docker compose for user service

--- a/backend/user-service/src/main/resources/application.yml
+++ b/backend/user-service/src/main/resources/application.yml
@@ -13,3 +13,15 @@ spring:
     console:
       enabled: true
       path: /h2-console
+
+---
+
+spring:
+  config:
+    activate:
+      on-profile: dev
+
+  datasource:
+    url: jdbc:postgresql://user_db_host:5432/user_db
+    username: postgres
+    password: postgres
