--- a/backend/compose.yml
+++ b/backend/compose.yml
@@ -1,8 +1,24 @@
+x-service: &service
+  environment:
+    - SPRING_PROFILES_ACTIVE=dev
+
+x-db: &db
+  image: postgres:16.0-alpine
+  restart: always
+  healthcheck:
+    test: pg_isready -U postgres
+    interval: 10s
+    timeout: 5s
+    retries: 5
+
+x-db-env: &db-env
+  POSTGRES_USER: postgres
+  POSTGRES_PASSWORD: postgres
+
 services:
   user_service:
+    <<: *service
     build: user-service
-    environment:
-      - SPRING_PROFILES_ACTIVE=dev
     ports:
       - 8081:8081
     networks:
@@ -12,29 +28,20 @@ services:
         condition: service_healthy
 
   user_db_host:
-    image: postgres:16.0-alpine
-    restart: always
+    <<: *db
     environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
-      - POSTGRES_DB=user_db
+      <<: *db-env
+      POSTGRES_DB: user_db
     volumes:
-      - user_db_host:/var/lib/postgresql/user/data
+      - user_db_host:/var/lib/postgresql/data
     ports:
       - 5432:5432
     networks:
       - network_user_db_service
-    healthcheck:
-      test: pg_isready -U postgres
-      interval: 10s
-      timeout: 5s
-      retries: 5
-
 
   post_service:
+    <<: *service
     build: post-service
-    environment:
-      - SPRING_PROFILES_ACTIVE=dev
     ports:
       - 8082:8082
     networks:
@@ -44,29 +51,21 @@ services:
         condition: service_healthy
 
   post_db_host:
-    image: postgres:16.0-alpine
-    restart: always
+    <<: *db
     environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
-      - POSTGRES_DB=post_db
-      - PGPORT=5433
+      <<: *db-env
+      POSTGRES_DB: post_db
+      PGPORT: 5433
     volumes:
-      - post_db_host:/var/lib/postgresql/post/data
+      - post_db_host:/var/lib/postgresql/data
     ports:
       - 5433:5433
     networks:
       - network_post_db_service
-    healthcheck:
-      test: pg_isready -U postgres
-      interval: 10s
-      timeout: 5s
-      retries: 5
 
 networks:
   network_user_db_service:
   network_post_db_service:
-
 
 volumes:
   user_db_host:
