--- a/backend/user-service/src/main/resources/application.yml
+++ b/backend/user-service/src/main/resources/application.yml
@@ -8,16 +8,16 @@ spring:
     activate:
       on-profile: local
 
-  datasource:
-    url: jdbc:h2:mem:db
-    username: sa
-    password: sa
-    driverClassName: org.h2.Driver
-
-  h2:
-    console:
-      enabled: true
-      path: /h2-console
+#  datasource:
+#    url: jdbc:h2:mem:db
+#    username: sa
+#    password: sa
+#    driverClassName: org.h2.Driver
+#
+#  h2:
+#    console:
+#      enabled: true
+#      path: /h2-console
 
 ---
 
@@ -30,3 +30,9 @@ spring:
     url: jdbc:postgresql://user_db_service:5432/user_db
     username: postgres
     password: postgres
+  jpa:
+    properties:
+      hibernate:
+        format_sql: true
+    hibernate:
+      ddl-auto: create-drop
