--- a/backend/post-service/src/main/resources/application.yml
+++ b/backend/post-service/src/main/resources/application.yml
@@ -8,16 +8,16 @@ spring:
     activate:
       on-profile: local
 
-#  datasource:
-#    url: jdbc:h2:mem:db
-#    username: sa
-#    password: sa
-#    driverClassName: org.h2.Driver
-#
-#  h2:
-#    console:
-#      enabled: true
-#      path: /h2-console
+  datasource:
+    url: jdbc:h2:mem:db
+    username: sa
+    password: sa
+    driverClassName: org.h2.Driver
+
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
 
 ---
 
@@ -35,4 +35,4 @@ spring:
       hibernate:
         format_sql: true
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: update
