--- a/backend/post-service/pom.xml
+++ b/backend/post-service/pom.xml
@@ -64,7 +64,15 @@
             <version>13.0</version>
             <scope>compile</scope>
         </dependency>
-    </dependencies>
+
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-webflux -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-webflux</artifactId>
+			<version>3.2.0</version>
+		</dependency>
+
+	</dependencies>
 
 	<build>
 		<plugins>
