--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,7 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "postcss": "^8.4.31",
+    "prettier": "3.1.0",
     "tailwindcss": "^3.3.5",
     "typescript": "~5.1.3"
   }
