--- a/backend/user-service/src/main/resources/application.yml
+++ b/backend/user-service/src/main/resources/application.yml
@@ -8,16 +8,16 @@ spring:
     activate:
       on-profile: local
 
-#  datasource:
-#    url: jdbc:h2:mem:db
-#    username: sa
-#    password: sa
-#    driverClassName: org.h2.Driver
-#
-#  h2:
-#    console:
-#      enabled: true
-#      path: /h2-console
+  datasource:
+    url: jdbc:h2:mem:db
+    username: sa
+    password: sa
+    driverClassName: org.h2.Driver
+
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
 
 ---
 
