--- a/backend/post-service/src/main/resources/application.yml
+++ b/backend/post-service/src/main/resources/application.yml
@@ -1,12 +1,20 @@
 server:
   port: 8082
 
+logging:
+  level:
+    org.springframework.web: DEBUG
+    org.hibernate: ERROR
+
 ---
 
 spring:
   config:
     activate:
       on-profile: local
+
+  mvc:
+    log-request-details: true # for debugging
 
   datasource:
     url: jdbc:h2:mem:db
@@ -26,8 +34,11 @@ spring:
     activate:
       on-profile: dev
 
+  mvc:
+    log-request-details: true # for debugging
+
   datasource:
-    url: jdbc:postgresql://post_db_service:5433/post_db
+    url: jdbc:postgresql://post-db-service:5433/post_db
     username: postgres
     password: postgres
   jpa:
