--- a/backend/user-service/src/main/resources/application.yml
+++ b/backend/user-service/src/main/resources/application.yml
@@ -1,9 +1,17 @@
 server:
   port: 8081
 
+logging:
+  level:
+    org.springframework.web: DEBUG
+    org.hibernate: ERROR
+
 ---
 
 spring:
+  mvc:
+    log-request-details: true # for debugging
+
   config:
     activate:
       on-profile: local
@@ -26,8 +34,11 @@ spring:
     activate:
       on-profile: dev
 
+  mvc:
+    log-request-details: true # for debugging
+
   datasource:
-    url: jdbc:postgresql://user_db_service:5432/user_db
+    url: jdbc:postgresql://user-db-service:5432/user_db
     username: postgres
     password: postgres
   jpa:
