--- a/backend/compose.yml
+++ b/backend/compose.yml
@@ -1,3 +1,5 @@
+version: '3.8'
+
 x-service: &service
   environment:
     - SPRING_PROFILES_ACTIVE=dev
@@ -16,60 +18,60 @@ x-db-env: &db-env
   POSTGRES_PASSWORD: postgres
 
 services:
-  user_service:
+  user-service:
     <<: *service
     build: user-service
     ports:
-      - 8081:8081
+      - '8081:8081'
     networks:
-      - net_userDB_userServ
-      - net_postServ_userServ
+      - net-userDB-userServ
+      - net-postServ-userServ
     depends_on:
-      user_db_service:
+      user-db-service:
         condition: service_healthy
 
-  user_db_service:
+  user-db-service:
     <<: *db
     environment:
       <<: *db-env
       POSTGRES_DB: user_db
     volumes:
-      - vol_user_db:/var/lib/postgresql/data
+      - vol-user-db:/var/lib/postgresql/data
     ports:
-      - 5432:5432
+      - '5432:5432'
     networks:
-      - net_userDB_userServ
+      - net-userDB-userServ
 
-  post_service:
+  post-service:
     <<: *service
     build: post-service
     ports:
-      - 8082:8082
+      - '8082:8082'
     networks:
-      - net_postDB_postServ
-      - net_postServ_userServ
+      - net-postDB-postServ
+      - net-postServ-userServ
     depends_on:
-      post_db_service:
+      post-db-service:
         condition: service_healthy
 
-  post_db_service:
+  post-db-service:
     <<: *db
     environment:
       <<: *db-env
       POSTGRES_DB: post_db
       PGPORT: 5433
     volumes:
-      - vol_post_db:/var/lib/postgresql/data
+      - vol-post-db:/var/lib/postgresql/data
     ports:
-      - 5433:5433
+      - '5433:5433'
     networks:
-      - net_postDB_postServ
+      - net-postDB-postServ
 
 networks:
-  net_postDB_postServ:
-  net_userDB_userServ:
-  net_postServ_userServ:
+  net-postDB-postServ:
+  net-userDB-userServ:
+  net-postServ-userServ:
 
 volumes:
-  vol_post_db:
-  vol_user_db:
+  vol-user-db:
+  vol-post-db:
