--- a/backend/user-service/src/main/resources/application.yml
+++ b/backend/user-service/src/main/resources/application.yml
@@ -34,6 +34,11 @@ spring:
     activate:
       on-profile: dev
 
+  sql:
+    init:
+      platform: postgres
+      mode: always
+
   mvc:
     log-request-details: true # for debugging
 
@@ -41,9 +46,12 @@ spring:
     url: jdbc:postgresql://user-db-service:5432/user_db
     username: postgres
     password: postgres
+
   jpa:
     properties:
       hibernate:
         format_sql: true
     hibernate:
       ddl-auto: create-drop
+    defer-datasource-initialization: true # Very important to include - otherwise loading data.sql file will cause error
+
