--- a/backend/post-service/src/main/resources/application.yml
+++ b/backend/post-service/src/main/resources/application.yml
@@ -38,6 +38,7 @@ spring:
     init:
       platform: postgres
       mode: always
+      separator: "^^^ END OF SCRIPT ^^^"
 
   mvc:
     log-request-details: true # for debugging
@@ -48,9 +49,12 @@ spring:
     password: postgres
 
   jpa:
+    show-sql: true
     properties:
       hibernate:
         format_sql: true
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+
     hibernate:
       ddl-auto: create-drop
     defer-datasource-initialization: true # Very important to include - otherwise loading data.sql file will cause error
