Api-gateway is running properly local but doesn't with docker

--- a/backend/gateway-service/pom.xml
+++ b/backend/gateway-service/pom.xml
@@ -45,4 +45,24 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
+
+    <!-- Build configuration -->
+    <build>
+        <plugins>
+            <!-- Spring Boot Maven plugin -->
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>3.2.0</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
