--- a/backend/user-service/src/main/resources/application.yml
+++ b/backend/user-service/src/main/resources/application.yml
@@ -9,8 +9,6 @@ logging:
 ---
 
 spring:
-#  application:
-#    name: user-service
   mvc:
     log-request-details: true # for debugging
 
@@ -32,7 +30,7 @@ spring:
 #eureka:
 #  client:
 #    serviceUrl:
-#      defaultZone: http://localhost:8761/eureka
+#      defaultZone: http://localhost:8761/eureka //TODO: add discovery client
       # This is the name of the service in docker-compose.yml was localhost:8761/eureka
 
 ---
