--- a/backend/gateway-service/src/main/resources/application.yml
+++ b/backend/gateway-service/src/main/resources/application.yml
@@ -1,11 +1,8 @@
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: http://localhost:8761/eureka
-
-
-#  application:
-#    name: api-gateway
+# TODO: add discovery client
+#eureka:
+#  client:
+#    serviceUrl:
+#      defaultZone: http://localhost:8761/eureka
 
 logging:
   level:
@@ -13,20 +10,3 @@ logging:
     org.springframework.cloud.gateway.route.RouteDefinitionLocator: INFO
     org.springframework.cloud.gateway: TRACE
 
-# Post service Route
-spring:
-  application:
-    name: api-gateway
-  cloud:
-    gateway:
-      routes:
-        - id: post-service
-          uri: http://post-service:8082
-          predicates:
-            - Path=/api/posts
-
-        # User service Route
-        - id: user-service
-          uri: http://user-service:8081
-          predicates:
-            - Path=/api/users
