--- a/backend/post-service/src/main/resources/application.yml
+++ b/backend/post-service/src/main/resources/application.yml
@@ -29,10 +29,10 @@ spring:
       enabled: true
       path: /h2-console
 
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: http://localhost:8761/eureka
+#eureka:
+#  client:
+#    serviceUrl:
+#      defaultZone: http://localhost:8761/eureka //TODO: add discovery client
       # This is the name of the service in docker-compose.yml was localhost:8761/eureka
 
 ---
