CORS config for gateway, deleted CORS config from microservices

--- a/backend/gateway-service/src/main/resources/application.yml
+++ b/backend/gateway-service/src/main/resources/application.yml
@@ -4,3 +4,50 @@ logging:
     org.springframework.cloud.gateway.route.RouteDefinitionLocator: INFO
     org.springframework.cloud.gateway: TRACE
 
+spring:
+  cloud:
+    gateway:
+      globalcors:
+        corsConfigurations:
+          '[/api/users/**]':
+            allowedOrigins:
+              - "http://localhost:4200"
+            allowedHeaders:
+              - "Authorization"
+              - "Content-Type"
+              - "UserId"
+            allowedMethods:
+              - GET
+              - POST
+              - PUT
+              - DELETE
+              - OPTIONS
+            maxAge: 3600
+          '[/api/posts/**]':
+            allowedOrigins:
+              - "http://localhost:4200"
+            allowedHeaders:
+              - "Authorization"
+              - "Content-Type"
+              - "UserId"
+            allowedMethods:
+              - GET
+              - POST
+              - PUT
+              - DELETE
+              - OPTIONS
+            maxAge: 3600
+          '[/api/comments/**]':
+            allowedOrigins:
+              - "http://localhost:4200"
+            allowedHeaders:
+              - "Authorization"
+              - "Content-Type"
+              - "UserId"
+            allowedMethods:
+              - GET
+              - POST
+              - PUT
+              - DELETE
+              - OPTIONS
+            maxAge: 3600
