auth service setup

--- a/backend/auth-service/src/main/resources/application.yml
+++ b/backend/auth-service/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8083
+  port: 8443
 
 logging:
   level:
@@ -10,31 +10,12 @@ logging:
 spring:
   security:
     oauth2:
-      client:
-        registration:
-          keycloak:
-            provider: keycloak
-            client-id: admin-cli
-            client-secret: 77P4n9OqHJUujZC5EE9WtIwDxXAn8CXh
-            authorization-grant-type: authorization_code
-            redirect-uri: ${keycloak-client.server-url}/login/oauth2/code/keycloak
-            scope: openid
-        provider:
-          keycloak:
-            authorization-uri: ${keycloak-client.server-url}/realms/${keycloak-client.realm}/protocol/openid-connect/auth
-            token-uri: ${keycloak-client.server-url}/realms/${keycloak-client.realm}/protocol/openid-connect/token
-            user-info-uri: ${keycloak-client.server-url}/realms/${keycloak-client.realm}/protocol/openid-connect/userinfo
-            jwk-set-uri: ${keycloak-client.server-url}/realms/${keycloak-client.realm}/protocol/openid-connect/certs
-            user-name-attribute: name
-            user-info-authentication-method: header
       resourceserver:
         jwt:
-          jwk-set-uri: ${keycloak-client.server-url}/realms/${keycloak-client.realm}/protocol/openid-connect/certs
-          issuer-uri: ${keycloak-client.server-url}/realms/SafeBankApp
+          jwk-set-uri: ${keycloak.server-url}/realms/${keycloak.realm}/protocol/openid-connect/certs
+          issuer-uri: ${keycloak.server-url}/realms/${keycloak.realm}
 keycloak:
-  server-url: http://localhost:8443
+  server-url: http://keycloak-service:8443
   realm: SpeakApp
-  admin: admin
-  admin-password: admin
   client-id: admin-cli
   client-secret: 77P4n9OqHJUujZC5EE9WtIwDxXAn8CXh
