--- a/backend/keycloak-service/themes/keywind/login/theme.properties
+++ b/backend/keycloak-service/themes/keywind/login/theme.properties
@@ -1,4 +1,4 @@
-parent=base
+parent=keycloak
 
-styles=dist/index.css
+styles=dist/index.css dist/declarative-user-profile.css
 scripts=dist/index.js
