--- a/backend/keycloak-utils/pom.xml
+++ b/backend/keycloak-utils/pom.xml
@@ -11,7 +11,7 @@
     </parent>
 
     <groupId>com.speakapp</groupId>
-    <artifactId>keycloak-register-event-listener</artifactId>
+    <artifactId>keycloak-utils</artifactId>
 
     <dependencies>
         <dependency>
@@ -61,8 +61,15 @@
     </dependencies>
 
     <build>
-        <finalName>keycloak-register-event-listener</finalName>
+        <finalName>keycloak-utils</finalName>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <configuration>
+                    <outputDirectory>jar</outputDirectory>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
