--- a/backend/compose.yml
+++ b/backend/compose.yml
@@ -78,6 +78,46 @@ services:
     networks:
       - net-apiGw-userServ
       - net-apiGw-postServ
+      - net-apiGw-keycloak
+
+  keycloak:
+    image: quay.io/keycloak/keycloak:23.0
+    environment:
+      - KEYCLOAK_ADMIN=admin
+      - KEYCLOAK_ADMIN_PASSWORD=admin
+      - KC_DB=postgres
+      - KC_DB_URL_HOST=keycloak-db
+      - KC_DB_URL_DATABASE=keycloak_db
+      - KC_DB_USERNAME=postgres
+      - KC_DB_PASSWORD=postgres
+      - KC_DB_URL_PORT=5434
+    volumes:
+      - ./keycloak/realm-export.json:/opt/keycloak/data/import/realm-export.json
+    ports:
+      - '8443:8443'
+    networks:
+      - net-keycloakDB-keycloak
+      - net-apiGw-keycloak
+    command:
+      - "start-dev"
+      - "--http-port=8443"
+      - "--import-realm"
+    depends_on:
+      keycloak-db:
+        condition: service_healthy
+
+  keycloak-db:
+    <<: *db
+    environment:
+      <<: *db-env
+      POSTGRES_DB: keycloak_db
+      PGPORT: 5434
+    volumes:
+      - vol-keycloak-db:/var/lib/postgresql/data
+    ports:
+      - '5434:5434'
+    networks:
+      - net-keycloakDB-keycloak
 
 networks:
   net-postDB-postServ:
@@ -85,7 +125,10 @@ networks:
   net-postServ-userServ:
   net-apiGw-userServ:
   net-apiGw-postServ:
+  net-apiGw-keycloak:
+  net-keycloakDB-keycloak:
 
 volumes:
   vol-user-db:
   vol-post-db:
+  vol-keycloak-db:
