update keycloak url to match docker compose

--- a/backend/gateway-service/src/main/resources/application.yml
+++ b/backend/gateway-service/src/main/resources/application.yml
@@ -8,7 +8,7 @@ app:
   cors:
     allowed-origins: http://localhost:4200
   jwt:
-    keycloak: http://keycloak:8443
+    keycloak: http://keycloak-service:8443
     realm: users-realm
     issuer-uri: http://localhost:8443/realms/${app.jwt.realm}
     resource-client-id: frontend-web
