--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,13 +12,15 @@
   "dependencies": {
     "@angular-material-components/datetime-picker": "^16.0.1",
     "@angular/animations": "^16.2.0",
-    "@angular/common": "^16.2.0",
+    "@angular/common": "^16.2.12",
     "@angular/compiler": "^16.2.0",
     "@angular/core": "^16.2.0",
     "@angular/forms": "^16.2.0",
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "keycloak-angular": "^14.2.0",
+    "keycloak-js": "^23.0.7",
     "ngx-infinite-scroll": "^16.0.0",
     "rxjs": "~7.8.0",
     "theme-change": "^2.5.0",
