--- a/backend/discovery-service/src/main/resources/application.yml
+++ b/backend/discovery-service/src/main/resources/application.yml
@@ -1,10 +1,11 @@
-eureka:
-  instance:
-    hostname: localhost
-  client:
-    register-with-eureka: false
-    fetch-registry: false
+spring:
+  application:
+    name: eureka-server
 
 server:
   port: 8761
 
+eureka:
+  client:
+    register-with-eureka: false
+    fetch-registry: false
