Set up discovery server and docker

--- a/backend/discovery-service/Dockerfile
+++ b/backend/discovery-service/Dockerfile
@@ -1,26 +1,4 @@
-FROM eclipse-temurin:17-jdk-alpine AS builder
+FROM openjdk:8-jdk-alpine
+ADD target/discovery-service-*.jar app.jar
+ENTRYPOINT ["java","-jar","app.jar"]
 
-WORKDIR app
-
-COPY mvnw .
-COPY .mvn .mvn
-COPY pom.xml .
-RUN dos2unix mvnw
-RUN ./mvnw dependency:go-offline
-
-COPY src src
-RUN ./mvnw package -DskipTests
-
-ARG JAR_FILE=target/*.jar
-RUN java -Djarmode=layertools -jar ${JAR_FILE} extract --destination target/extracted
-
-FROM eclipse-temurin:17-jdk-alpine
-
-WORKDIR app
-ARG EXTRACTED=app/target/extracted
-COPY --from=builder ${EXTRACTED}/dependencies/ ./
-COPY --from=builder ${EXTRACTED}/spring-boot-loader/ ./
-COPY --from=builder ${EXTRACTED}/snapshot-dependencies/ ./
-COPY --from=builder ${EXTRACTED}/application/ ./
-
-ENTRYPOINT ["java", "org.springframework.boot.loader.JarLauncher"]
