--- a/backend/gateway-service/pom.xml
+++ b/backend/gateway-service/pom.xml
@@ -12,6 +12,10 @@
     <groupId>com.speakapp</groupId>
     <artifactId>gateway-service</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
+
+    <name>gateway-service</name>
+    <description>Gateway service for SpeakApp</description>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
@@ -40,6 +44,20 @@
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
     </dependencies>
