--- a/backend/user-service/src/main/resources/application.yml
+++ b/backend/user-service/src/main/resources/application.yml
@@ -1,11 +1,28 @@
 server:
   port: 8081
 
+spring:
+  application:
+    name: user-service
+
 logging:
   level:
     org.springframework.web: DEBUG
     org.hibernate: ERROR
 
+eureka:
+  client:
+    register-with-eureka: true
+    fetch-registry: true
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include:
+        - "*"
 ---
 
 spring:
