Config inside services application.yml (for config server)

--- a/backend/post-service/src/main/resources/application.yml
+++ b/backend/post-service/src/main/resources/application.yml
@@ -4,6 +4,8 @@ server:
 spring:
   application:
     name: post-service
+  config:
+    import: optional:configserver:${SPRING_CLOUD_CONFIG_URI:http://localhost:8888/post-service}
 
 eureka:
   client:
